tests/ui/type-qpath-unexpected1.stderr
error: no rules expected the token `@`
 --> $DIR/type-qpath-unexpected1.rs:6:19
  |
6 |     input = [{ <T @ }]
  |                   ^

error: aborting due to previous error

